--- a/Content/Topics/Release Notes/Allocation.htm
+++ b/Content/Topics/Release Notes/Allocation.htm
@@ -6,7 +6,7 @@
     <body>
         <h1>Allocations</h1>
         <h2>Gaining insight as to why an order didn't happen</h2>
-        <p>TG JE v2024.2 introduces a way for users to investigate why an order from a selected Allocation Strategy didn't happen using health check data. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users are empowered to manage their configurations and resolve issues independently and quickly, reducing the need to escalate support tickets. </p>
+        <p>Users now have a quick and convenient way to investigate why an order from a selected Allocation Strategy didn't happen. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users can resolve certain issues independently and quickly, reducing the need to escalate support tickets and the time to resolution. </p>
         <p>
             <img src="../../Resources/Images/Allocations/Health Check Tab.png" class="LargeImages" />
         </p>
