--- a/Content/Topics/Release Notes/Resolved Issues Log.htm
+++ b/Content/Topics/Release Notes/Resolved Issues Log.htm
@@ -106,6 +106,46 @@ Re-tick <span class="Emphasis">Selling Period</span>, and save, and sales units 
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Assortment</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">Reconciliation Report - Markdown Sales Units Not Populated For Comparison Plan 1</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">External Bug</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">&#160;</td>
+                </tr>
+                <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyA-Column1-Body1" colspan="4"><span class="Emphasis">Reported Behavior</span>
+                        <p>The Reconciliation Report was not returning the Markdown Sales Units for Comparison Plan 1<![CDATA[
+]]></p>
+                        <p><span class="Emphasis">Steps to Verify</span><![CDATA[
+
+]]></p>
+                        <ol>
+                            <li>
+                                <p>Whichever plan is selected for comparison plan 1, ensure there are markdown values and units for the selected time/product/sites in that plan. (Doesn’t matter too much about plan 2.)</p>
+                            </li>
+                            <li>
+                                <p>Click <span class="Emphasis">Execute</span> and see that Markdown Sales Units is not populated for Comparison Plan 1.</p>
+                            </li>
+                        </ol>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <p>&#160;</p>
+        <table style="width: 100%; mc-table-style: url('../../Resources/TableStyles/standard.css'); margin-left: 0; margin-right: auto;" class="TableStyle-standard" cellspacing="0">
+            <col class="TableStyle-standard-Column-Column1" />
+            <col class="TableStyle-standard-Column-Column2" />
+            <col class="TableStyle-standard-Column-Column1" />
+            <col class="TableStyle-standard-Column-Column2" />
+            <thead>
+                <tr class="TableStyle-standard-Head-Header1">
+                    <th class="TableStyle-standard-HeadE-Column1-Header1">Components</th>
+                    <th class="TableStyle-standard-HeadE-Column2-Header1">Summary</th>
+                    <th class="TableStyle-standard-HeadE-Column1-Header1">Issue Type</th>
+                    <th class="TableStyle-standard-HeadD-Column2-Header1">Merged to Other Releases</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                         Import/Export SQL
                         <p>Site Clustering</p></td>
