DMDEV-89573 DMDEV-89572 DMDEV-89571

--- a/Content/Topics/Release Notes/Assortment Planning.htm
+++ b/Content/Topics/Release Notes/Assortment Planning.htm
@@ -34,5 +34,19 @@ This means that the Smart Started <span class="Emphasis">AUR</span> value is not
                 <p><span class="Emphasis">Image view</span> (<span class="Emphasis">View Options</span> &gt; <span class="Emphasis">Quick Text</span> drop-down menu).</p>
             </li>
         </ul>
+        <h2>Managing attribute-based sub-clusters across views in AP</h2>
+        <p>Existing sub-clustering functionality allows users, via Cluster Sets view, to grade and cluster (ABC) store cluster sets based on sales performance and then sub-cluster by a site-specific Lookup attribute type (such as cold, hot, warm), including user defined attributes. The result is adjustments to phase periods based on site attributes. The sub-clustering functionality is now extended to the following:</p>
+        <ul>
+            <li>
+                <p>Receipt Plan view</p>
+            </li>
+            <li>
+                <p>Sales Plan view</p>
+            </li>
+            <li>
+                <p>Top Down Core Plan view</p>
+            </li>
+        </ul>
+        <p class="BasicNote">An in-depth description on sub-clustering, including configuring AP to use attribute sub-clusters, is available by referring to the TG JE v2022.2 Release Notes.</p>
     </body>
 </html>
