--- a/Content/Topics/Allocations/Validating Size Models.htm
+++ b/Content/Topics/Allocations/Validating Size Models.htm
@@ -92,7 +92,7 @@
             </li>
             <li>Repeat steps 3-5 for each enhanced size model to be validated.</li>
         </ol>
-        <h2><a name="results"></a>Validation results</h2>
+        <h2>Validation results</h2>
         <p>Select a size model in the top grid to view its validation results in the bottom grid.</p>
         <p>
             <img src="../../Resources/Images/Allocation Size/Validation Results.png" class="LargeImages" />
