--- a/Content/Topics/Promotion Management/Add products to a Site Cluster.htm
+++ b/Content/Topics/Promotion Management/Add products to a Site Cluster.htm
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Add products to a site cluster</h1>
@@ -44,8 +42,5 @@
             <li>These groups are dynamic meaning the associated products included in the group are automatically updated depending on the filter criteria used to create the group. This update only occurs as long as the promotion is in an unlocked state.</li>
             <li>When adding a group to a promotion, a copy of the original group is automatically created, including the filter criteria used to define the group. Changes can be made at the promotion level without affecting the originating product group.</li>
         </ul>
-        <h2>Additional information</h2>
-        <p MadCap:conditions="General.PrintOnly">For information on creating, editing, and deleting filters, refer to the Filters User Guide.</p>
-        <p MadCap:conditions="General.ScreenOnly">For information on creating, editing, and deleting filters, <MadCap:xref href="../Filters/Filters Overview.htm">Filters overview</MadCap:xref>.</p>
     </body>
 </html>
