--- a/Content/Topics/Release Notes/Allocation.htm
+++ b/Content/Topics/Release Notes/Allocation.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Allocations</h1>
-        <h2>Gaining insight as to why an order didn't happen</h2>
+        <h2>Improved issue resolution process</h2>
         <p>Users now have a quick and convenient way to investigate why an order from a selected Allocation Strategy didn't happen. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users can resolve certain issues independently and quickly, reducing the need to escalate support tickets and the time to resolution. </p>
         <p>
             <img src="../../Resources/Images/Allocations/Health Check Tab.png" class="LargeImages" />
@@ -41,7 +41,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>Each step has possible conditions:</p>
+        <p>The Health Check process stops if there's a failure in a step as subsequent steps are dependent on the previous steps passing successfully. Each step has possible conditions:</p>
         <table style="width: 100%; mc-table-style: url('../../Resources/TableStyles/standard.css'); margin-left: 0; margin-right: auto;" class="TableStyle-standard" cellspacing="0">
             <col class="TableStyle-standard-Column-Column1" />
             <col class="TableStyle-standard-Column-Column2" style="width: 188px;" />
