--- a/Content/Topics/Release Notes/Resolved Issues Log.htm
+++ b/Content/Topics/Release Notes/Resolved Issues Log.htm
@@ -147,6 +147,34 @@ Re-tick <span class="Emphasis">Selling Period</span>, and save, and sales units 
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
+                         Assortment 
+                        <p>Target Choice Counts</p><p>Target Creation</p></td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">Bad Join in [rationalize].[Target_ScenarioData_History_Calculate]</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">External Bug</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">v2024.1.2.0</td>
+                </tr>
+                <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyA-Column1-Body1" colspan="4">Addressed a bad table join in the Target_ScenarioData_History_Calculate procedure</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>&#160;</p>
+        <table style="width: 100%; mc-table-style: url('../../Resources/TableStyles/standard.css'); margin-left: 0; margin-right: auto;" class="TableStyle-standard" cellspacing="0">
+            <col class="TableStyle-standard-Column-Column1" />
+            <col class="TableStyle-standard-Column-Column2" />
+            <col class="TableStyle-standard-Column-Column1" />
+            <col class="TableStyle-standard-Column-Column2" />
+            <thead>
+                <tr class="TableStyle-standard-Head-Header1">
+                    <th class="TableStyle-standard-HeadE-Column1-Header1">Components</th>
+                    <th class="TableStyle-standard-HeadE-Column2-Header1">Summary</th>
+                    <th class="TableStyle-standard-HeadE-Column1-Header1">Issue Type</th>
+                    <th class="TableStyle-standard-HeadD-Column2-Header1">Merged to Other Releases</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">
                         Import/Export SQL
                         <p>Site Clustering</p></td>
                     <td class="TableStyle-standard-BodyE-Column2-Body1">Cluster Set Import Bug Caused by Duplicate / Inactive Cluster Set Entities</td>
