--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -99,6 +99,7 @@
         <p>
             <img src="../../Resources/Images/Target Choice Count/Target Choices By Update.png" class="LargeImages" />
         </p>
-        <p class="BasicNote">Sales Plan fields are frozen left and the cell color formatted if the item is in phase.</p>
+        <p>Phase date changes automatically trigger a re-calculation of the sales plan and Carryover numbers in the upper grid.</p>
+        <p class="BasicNote">Sales Plan fields are frozen left and the cell color formatted if the item is in phase. Fields formatted in blue are editable.</p>
     </body>
 </html>
