--- a/Content/Topics/Supply Chain/Supply Chain Overview.htm
+++ b/Content/Topics/Supply Chain/Supply Chain Overview.htm
@@ -52,7 +52,7 @@
                 <MadCap:xref href="Create a supply chain override.htm">Creating a Supply Chain Override</MadCap:xref>
             </li>
         </ul>
-        <h2><a name="Customiz"></a>Customizable source priority</h2>
+        <h2>Customizable source priority</h2>
         <p>If a site experiences a potential shortfall in inventory, rank the preferred order of other sites it receives stock from. For example, prioritize geographically close sites, but protect flagship stores. To determine site priority, the following values are checked in order:</p>
         <ol>
             <li>Priority defined for the site in the supply chain</li>
