--- a/Content/Topics/Time Frame/Time Frame Maintenance Window.htm
+++ b/Content/Topics/Time Frame/Time Frame Maintenance Window.htm
@@ -68,7 +68,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2><a name="Time"></a>Time Frame Definition pane</h2>
+        <h2>Time Frame Definition pane</h2>
         <p>This pane displays the definitions of the selected time frame. The fields shown depend on the  time frame definition type (static, dynamic, or schedule) that was selected for the time frame when it was created.</p>
         <MadCap:snippetBlock src="../../Resources/Snippets/Time Frame Definition Fields.flsnp" />
         <h2>Time Frame Exclusion</h2>
