--- a/Content/Topics/Release Notes/Allocation.htm
+++ b/Content/Topics/Release Notes/Allocation.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Allocations</h1>
-        <h2>Improved issue resolution process</h2>
+        <h2>Streamlined issue resolution</h2>
         <p>Users now have a quick and convenient way to investigate why an order from a selected Allocation Strategy didn't happen. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users can resolve certain issues independently and quickly, reducing the need to escalate support tickets and the time to resolution. </p>
         <p>
             <img src="../../Resources/Images/Allocations/Health Check Tab.png" class="LargeImages" />
