--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -72,17 +72,6 @@
         <p>
             <img src="../../Resources/Images/Assortment Planning/End Date Definition Set To Last Regular Date.png" class="LargeImages" />
         </p>
-        <h3>Maximum number of periods in a scenario</h3>
-        <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
-        <p>
-            <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
-        </p>
-        <p>If a user tries to change Window of Time after updates are created, the updates are cleared anyway.</p>
-        <h3>Date validations</h3>
-        <p>The following message displays for date validations:</p>
-        <p>
-            <img src="../../Resources/Images/Assortment Planning/Date Validations.png" class="LargeImages" />
-        </p>
         <h2>Target Choices By Update view</h2>
         <p>The <span class="Emphasis">Target Choices By Update</span> view, which displays by selecting toolbar option <span class="Emphasis">View Choices By Update</span> on the<span class="Emphasis"> Edit Target Scenario</span> view, has been reconfigured as follows. Users can:</p>
         <ul>
@@ -97,9 +86,21 @@
             </li>
         </ul>
         <p>
-            <img src="../../Resources/Images/Target Choice Count/Target Choices By Update.png" class="LargeImages" />
+            <img src="../../Resources/Images/Target Choice Count/Target Choices By Update.png" class="LargeImages">
+            </img>
         </p>
         <p>Phase date changes automatically trigger a re-calculation of the sales plan and Carryover numbers in the upper grid.</p>
         <p class="BasicNote">Sales Plan fields are frozen left and the cell color formatted if the item is in phase. Fields formatted in blue are editable.</p>
+        <h3>Maximum number of periods in a scenario</h3>
+        <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
+        <p>
+            <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
+        </p>
+        <p>If a user tries to change Window of Time after updates are created, the updates are cleared anyway.</p>
+        <h3>Date validations</h3>
+        <p>The following message displays for date validations:</p>
+        <p>
+            <img src="../../Resources/Images/Assortment Planning/Date Validations.png" class="LargeImages" />
+        </p>
     </body>
 </html>
