Across the board updates

--- a/Content/DM Glossary.htm
+++ b/Content/DM Glossary.htm
@@ -18,7 +18,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1"> Allocations</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                    The Allocations module contains a clear work flow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
+                    The Allocations module contains a clear workflow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -121,7 +121,7 @@
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Carrying Cost</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         The marginal cost per period for holding one unit of inventory, typically a year (Hill, 59). Inventory carrying cost, also known as inventory holding cost, is the cost associated with holding inventory or stock in storage or a warehouse, in order to fulfill sales orders. 
-                        <p>Carrying Cost = Avg. inventory investment X Carrying Charge</p><p class="Example">If Annual carrying charge = 25% and avg. inventory = $100,000, then the carrying cost is $25,000 per year</p></td>
+                        <p>Carrying Cost = Avg. inventory investment X Carrying Charge</p><p class="Example">If annual carrying charge = 25% and avg. inventory = $100,000, then the carrying cost is $25,000 per year</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Causal</td>
@@ -732,7 +732,7 @@ Last Week Sales Revenue allows allocators and demand planners to review sales pe
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Site Groups</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The logical groupings of sites based on user preferences and set up</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The logical groupings of sites based on user preferences and set up.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Site Hierarchy</td>
