--- a/Content/Topics/Allocations/Size models field reference.htm
+++ b/Content/Topics/Allocations/Size models field reference.htm
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-       
     </head>
     <body>
         <h1>Size models field reference</h1>
@@ -63,12 +62,10 @@ items.</p>
 </p>
             </li>
             <li>
-                <p><span class="Emphasis">% Variants Qualified</span> - The percentage of variants for a site that must pass data cleansing for the size curve to pass
-.</p>
+                <p><span class="Emphasis">% Variants Qualified</span> - The percentage of variants for a site that must pass data cleansing for the size curve to pass.</p>
             </li>
             <li>
-                <p><![CDATA[
-]]><span class="Emphasis">Qualified Sales Units</span> - The number of sales units for a site that must be left after data cleansing for the size curve to pass.
+                <p><span class="Emphasis">Qualified Sales Units</span> - The number of sales units for a site that must be left after data cleansing for the size curve to pass.
 </p>
             </li>
             <li>
