--- a/Content/Topics/Allocations/Strategy Activation view.htm
+++ b/Content/Topics/Allocations/Strategy Activation view.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Strategy Activation view</h1>
-        <p>The <span class="Emphasis">Strategy Activation</span> view is a single column pivot grid that can be used to create Allocation Strategies and start working on them before starting to allocate. Use the <span class="Emphasis">Item Filter</span> dropdown field to filter which variants (style/color) to display. </p>
+        <p>The <span class="Emphasis">Strategy Activation</span> view is a single column pivot grid that can be used to create and work on Allocation Strategies before starting to allocate. Use the <span class="Emphasis">Item Filter</span> dropdown field to filter which variants (style/color) to display. </p>
         <p class="BasicNote">Assigned permissions determine which channels a logged-in user can activate. For the site based permissions, if the logged-in user has permission for at least one site, then they have permission to the entire channel (i.e. see the entire column for that channel). If all the sites belong in only one channel, then only one column displays.</p>
         <p>Allocation Strategies that have already been created are check marked in the <span class="Emphasis">Activate?</span> column and grayed out. Existing strategies cannot be deleted in the <span class="Emphasis">Strategy Activation</span> view. (There is an existing nightly job that deprecates strategies.)</p>
         <p>
