--- a/Content/Topics/Inventory Manager/Stock To Service Blade.htm
+++ b/Content/Topics/Inventory Manager/Stock To Service Blade.htm
@@ -81,8 +81,7 @@ For example, users can put the curve at the 90% service level and move along the
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Minimum supply lot [<i>units</i>] (*)
 					</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-						The minimum quantity that can be ordered from the supplier or produced
-						. 
+						The minimum quantity that can be ordered from the supplier or produced. 
 					<p class="BasicNote">For modeling, TG SO99+ uses whichever of the 2 parameters offers greater time coverage.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
