--- a/Content/Topics/Wholesale Planning/Wholesale Planning Overview.htm
+++ b/Content/Topics/Wholesale Planning/Wholesale Planning Overview.htm
@@ -11,7 +11,7 @@
         <p>The following keeps Wholesale-related functionality grouped together; structured as a logical progression through the planning and execution processes. It is important to keep in mind that the functionality noted in this section is visible in the standard retail modules, as applicable.</p>
         <h2>Establishing Wholesale Customer to Wholesale Account Relationships</h2>
         <h3>Using customer orders as sales history for Customers </h3>
-        <p>From the Wholesale perspective, “sales” can be viewed in two ways within TG JE: </p>
+        <p>From the Wholesale perspective, sales can be viewed in two ways within TG JE: </p>
         <ol>
             <li>
                 <p>Sales (or orders) signifying stock movement from the Wholesaler to the Customer Accounts, are referred to as Sell-In</p>
