--- a/Content/Topics/Workflow Manager/Creating a Workflow.htm
+++ b/Content/Topics/Workflow Manager/Creating a Workflow.htm
@@ -11,7 +11,7 @@
                 <p>The <span class="Emphasis">Workflow</span> manager displays. </p>
             </li>
             <li>
-                <p>From the Workflow toolbar, <span class="Emphasis">New</span> . </p>
+                <p>Click <span class="Emphasis">New</span>. </p>
                 <p>
                     <img src="../../Resources/Images/Workflow Manager/WF toolbar.png" class="LargeImages" />
                 </p>
@@ -47,14 +47,14 @@
                         <tr class="TableStyle-standard-Body-Body1">
                             <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Active</span>
                             </td>
-                            <td class="TableStyle-standard-BodyD-Column2-Body1">Whether the workflow is active in the system. Consider making workflows inactive while creating or editing them to avoid unintended behavior.</td>
+                            <td class="TableStyle-standard-BodyD-Column2-Body1">Whether the workflow is active. Consider making workflows inactive while creating or editing them to avoid unintended behavior.</td>
                         </tr>
                         <tr class="TableStyle-standard-Body-Body1">
                             <td class="TableStyle-standard-BodyB-Column1-Body1"><span class="Emphasis">Controlled User Rights</span>
                             </td>
                             <td class="TableStyle-standard-BodyA-Column2-Body1">
                                 <p>The set of module specific user rights to be controlled by this workflow. The selected rights appear in the status permission blacklist of each status in the workflow. </p>
-                                <p>All user rights related to the selected module are selected by default. Customize this set by moving rights from the Workflow Controlled list to the Available list in the Workflow User Rights window.</p>
+                                <p>All user rights related to the selected module are selected by default. Customize this set by moving rights from the <span class="Emphasis">Workflow Controlled</span> list to the <span class="Emphasis">Available</span> list in the <span class="Emphasis">Workflow User Rights</span> window.</p>
                                 <p>
                                     <img src="../../Resources/Images/Workflow Manager/WF User Rights.png" class="LargeImages" />
                                 </p>
